# die-python

./: .dielib_commit  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/: Invoke-VisualStudio.ps1
.github/workflows/: build.yml
cmake/: FindDieLibrary.cmake  FindQt5.cmake.old  FindQt6.cmake  FindQt6.cmake.old  FindQt_6.cmake  __FindQt5.cmake.old
python/: CMakeLists.txt  requirements.txt
python/die/: __init__.py
python/inc/: die.hpp
python/src/: die.cpp
python/tests/: test_die.py  test_regression.py
python/tests/data/: README.md  test.rar
