[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "die_python"
version = "0.1.0"
description = "Python bindings for Detect It Easy (DIE)."
readme = "./README.md"
license.file = "./LICENSE"
requires-python = ">=3.8"
authors = [{ name = "@calladoum-elastic" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
]
dependencies = ["setuptools", "wheel", "nanobind"]

[project.optional-dependencies]
tests = ["pytest", "black", "beautifulsoup4", "lxml"]

[project.urls]
Homepage = "https://github.com/calladoum-elastic/die_python"

[tool.isort]
profile = "black"

[tool.scikit-build]
wheel.py-api = "cp312"
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.20"

# Note: VS2022 throws a compiler crash when building nanobind, forcing VS2019 for now
# cmake.args = ["-G", "Visual Studio 16 2019"]

# Uncomment for debug (+ASAN)
# cmake.verbose = true
# logging.level = "DEBUG"
# cmake.build-type = "Debug"
